@@ -1,3 +1,11 @@
+[0, 15, 87]: 2019-01-22
+  - fix problem with empty lists and the code to reinsert merge keys (reported via email 
+     by Zaloo)
+
+[0, 15, 87]: 2019-01-22
+  - fix problem with empty lists and the code to reinsert merge keys (reported via email 
+    by Zaloo)
+
 [0, 15, 86]: 2019-01-16
   - reinsert merge key in its old position (reported by grumbler on
     <Stackoverflow <https://stackoverflow.com/a/54206512/1307905>`__)
